# uup-builder

./: .gitignore  README.md  flake.nix  pyproject.toml  pytest.ini
.github/workflows/: release.yml  tests.yml
src/tests/: conftest.py  test_api.py  test_autoattend.py  test_cli.py  test_converter.py  test_deps.py  test_downloader.py  test_interactive.py  test_output.py
src/uup_builder/: __init__.py  __main__.py  api.py  autounattend.py  cli.py  converter.py  deps.py  downloader.py  interactive.py  output.py
